# last_mile_optimizer

./: .gitignore  Dockerfile  README.md  pyproject.toml
data/processed/: .gitignore  sao_paulo_deliveries.csv.dvc
notebooks/: 01_eda.ipynb
src/: api.py  model.py  visualize.py
