[project]
name = "last-mile-optimizer"
version = "0.1.0"
description = "ML project for last-mile delivery route optimization using DBSCAN and TSP."
authors = [
    {name = "Gabriel Grabowski",email = "gabgra@tlen.pl"}
]
requires-python = "^3.12"
dependencies = [
    "pandas (<3)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "mlflow (>=3.11.1,<4.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "graphql-core (<3.3.0)",
    "ortools (>=9.15.6755,<10.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "requests (>=2.33.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false